--- a/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
@@ -98,21 +98,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 random names are\n",
+      "Jayden\n",
+      "Hailey\n",
+      "John\n",
+      "Ellie\n",
+      "Alex\n"
+     ]
+    }
+   ],
    "source": [
     "import random \n",
-    "\n",
     "names = [\"John\", \"Jake\", \"Jack\", \"Alex\", \"Ryan\", \"Jaiden\", \"Jayden\", \"Jaden\", \"Ethan\", \"Emily\", \"Ella\", \"Ellie\", \"Hailey\", \"Kaylee\", \"Bob\"]\n",
     "\n",
-    "for i in range(5)\n",
-    "    random_choice1 = random.randint(0, names - 1) \n",
-    "    i += 1\n",
-    "\n",
-    "randomName = names[random_choice1] \n",
-    "\n",
-    "print(randomName) \n"
+    "i = 0\n",
+    "print(\"5 random names are\")\n",
+    "while i < 5:\n",
+    "    print(random.choice(names))\n",
+    "    i += 1"
    ]
   },
   {
@@ -125,16 +135,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player one won with a score of 6\n",
+      "Player two lost with a score of 3\n"
+     ]
+    }
+   ],
    "source": [
-    "def dice(n):\n",
-    "    rolls = []\n",
-    "    for i in range(n):\n",
-    "        two_dice = random.randint(1, 6) + random.randint(1, 6)\n",
-    "        rolls.append(two_dice)\n",
-    "    return rolls"
+    "import random\n",
+    "\n",
+    "oneFirstRoll = random.randrange(1,6)\n",
+    "oneSecondRoll = random.randrange(1,6)\n",
+    "oneScore = oneFirstRoll + oneSecondRoll\n",
+    "\n",
+    "twoFirstRoll = random.randrange(1,6)\n",
+    "twoSecondRoll = random.randrange(1,6)\n",
+    "twoScore = twoFirstRoll + twoSecondRoll\n",
+    "\n",
+    "if oneScore > twoScore:\n",
+    "    print (\"Player one won with a score of\",playerOne())\n",
+    "    print (\"Player two lost with a score of\",playerTwo())\n",
+    "\n",
+    "else:\n",
+    "    print (\"Player two won with a score of\",playerTwo())\n",
+    "    print (\"Player one lost with a score of\",playerOne())\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extra Credit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial direction of the robot: ['down']\n",
+      "Where the robot started: 11\n",
+      "The goal position is: [16]\n",
+      "The goal position is: [21, 21, 7, 7, 13, 13, 5, 5, 8, 8, 11, 15, 15, 10, 10, 17, 17, 16, 16, 3, 3, 19, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "direction = [\"up\", \"down\", \"left\", \"right\"]\n",
+    "itemDirection = random.choices(direction)\n",
+    "print(f\"Initial direction of the robot: {itemDirection}\") \n",
+    "\n",
+    "startNumber = random.randrange(1,25)\n",
+    "print(f\"Where the robot started: {startNumber}\")\n",
+    "\n",
+    "goalPosition = []\n",
+    "for i in range(1):\n",
+    "   r=random.randrange(1,25)\n",
+    "   if r != startNumber:\n",
+    "      goalPosition.append(r)\n",
+    "print(f\"The goal position is: {goalPosition}\")\n",
+    "\n",
+    "obstacles = []\n",
+    "for i in range(12):\n",
+    "   r=random.randint(1,25)\n",
+    "   if r != startNumber:\n",
+    "      obstacles.append(r)\n",
+    "   if r != goalPosition:\n",
+    "      obstacles.append(r)\n",
+    "   if r not in obstacles:\n",
+    "      obstacles.append(r)\n",
+    "print(f\"The goal position is: {obstacles}\")\n",
+    "\n",
+    "## I tried to make it so the program wouldn't repeat the same number twice and it worked but it doubles the number."
    ]
   }
  ],
@@ -145,8 +230,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
