--- a/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
@@ -37,7 +37,104 @@
    "metadata": {},
    "source": [
     "## Hacks\n",
-    "\n"
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "   <th>Question</th>\n",
+    "   <th>Answer</th>\n",
+    "  </tr>\n",
+    "\n",
+    " <tr>\n",
+    "    <td>Name</td>\n",
+    "    <td>Haeryn Yu</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>1</td>\n",
+    "    <td>X</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>2</td>\n",
+    "    <td>X</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>3</td>\n",
+    "    <td>B</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>4</td>\n",
+    "    <td>C</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>5</td>\n",
+    "    <td>A</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>6</td>\n",
+    "    <td>A</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>7</td>\n",
+    "    <td>B</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>8</td>\n",
+    "    <td>A</td>\n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td>9</td>\n",
+    "    <td>X</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "  \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'First Dice': 4, 'Second Dice': 3}, {'First Dice': 1, 'Second Dice': 5}, {'First Dice': 5, 'Second Dice': 4}, {'First Dice': 3, 'Second Dice': 3}, {'First Dice': 3, 'Second Dice': 3}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rolling 2 six-sided die\n",
+    "import random\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for i in range(5):\n",
+    "  one = random.randint(1, 6)  \n",
+    "  two = random.randint(1, 6)\n",
+    "\n",
+    "  # Step 4: accumulate all factors in dictionary `d`:\n",
+    "  d = { \"First Dice\": one, \"Second Dice\": two}\n",
+    "\n",
+    "  # Step 5: append `d` to `data`\n",
+    "  data.append(d)\n",
+    "\n",
+    "print(data)"
    ]
   }
  ],
@@ -48,8 +145,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
