--- a/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
+++ b/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
@@ -127,6 +127,25 @@ layout: notebook
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>5 random names are
+Jayden
+Hailey
+John
+Ellie
+Alex
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div>
     {% endraw %}
 
