--- a/_posts/2022-12-13-3.16-Hacks-and-Notes.md
+++ b/_posts/2022-12-13-3.16-Hacks-and-Notes.md
@@ -34,10 +34,116 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Hacks">Hacks<a class="anchor-link" href="#Hacks"> </a></h2>
+<h2 id="Hacks">Hacks<a class="anchor-link" href="#Hacks"> </a></h2><table>
+  <tr>
+   <th>Question</th>
+   <th>Answer</th>
+  </tr>
+
+ <tr>
+    <td>Name</td>
+    <td>Haeryn Yu</td>
+  </tr>
+
+  <tr>
+    <td>1</td>
+    <td>X</td>
+  </tr>
+
+  <tr>
+    <td>2</td>
+    <td>X</td>
+  </tr>
+
+  <tr>
+    <td>3</td>
+    <td>B</td>
+  </tr>
+
+  <tr>
+    <td>4</td>
+    <td>C</td>
+  </tr>
+
+  <tr>
+    <td>5</td>
+    <td>A</td>
+  </tr>
+
+  <tr>
+    <td>6</td>
+    <td>A</td>
+  </tr>
+
+  <tr>
+    <td>7</td>
+    <td>B</td>
+  </tr>
+
+  <tr>
+    <td>8</td>
+    <td>A</td>
+  </tr>
+
+  <tr>
+    <td>9</td>
+    <td>X</td>
+  </tr>
+</table>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Simulation">Simulation<a class="anchor-link" href="#Simulation"> </a></h2>
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
+
+<span class="n">data</span> <span class="o">=</span> <span class="p">[]</span>
+
+<span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">5</span><span class="p">):</span>
+  <span class="n">one</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">6</span><span class="p">)</span>  
+  <span class="n">two</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">6</span><span class="p">)</span>
+
+  <span class="c1"># Step 4: accumulate all factors in dictionary `d`:</span>
+  <span class="n">d</span> <span class="o">=</span> <span class="p">{</span> <span class="s2">&quot;First Dice&quot;</span><span class="p">:</span> <span class="n">one</span><span class="p">,</span> <span class="s2">&quot;Second Dice&quot;</span><span class="p">:</span> <span class="n">two</span><span class="p">}</span>
+
+  <span class="c1"># Step 5: append `d` to `data`</span>
+  <span class="n">data</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">d</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="n">data</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>[{&#39;First Dice&#39;: 4, &#39;Second Dice&#39;: 3}, {&#39;First Dice&#39;: 1, &#39;Second Dice&#39;: 5}, {&#39;First Dice&#39;: 5, &#39;Second Dice&#39;: 4}, {&#39;First Dice&#39;: 3, &#39;Second Dice&#39;: 3}, {&#39;First Dice&#39;: 3, &#39;Second Dice&#39;: 3}]
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
 </div>
  
 
