--- a/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-14-3.17-18-Hacks-and-Notes.ipynb
@@ -88,6 +88,197 @@
    "source": [
     "## Hacks"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hack 1 \n",
+    "Please write a short 1-2 sentence explanation describing the difference between decidable and undecidable problems. Make sure to provide at least one example of each.\n",
+    "\n",
+    "Answer: \n",
+    "A decidable problem is a problem for which algorithms can be written to solve/produce a correct output for all possible inputs. An example is if checking if a specific number is odd or even. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 7\n",
+    "\n",
+    "if num % 2 == 1: \n",
+    "    print(\"is odd\") \n",
+    "else:\n",
+    "    print(\"is even\") "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An undecidable problem is a problem for which no algorithms can be built that can provide a correct yes or no answer. An example is trying to find what the weather is going to be in a million years, no one can know because no one has traveled a million years. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hack 2\n",
+    "Which of the following is a 3 step algorithm?\n",
+    "\n",
+    "Answer:\n",
+    "It would be C because a 3 step algorithm is an algorithm where there is a variable multiplied by an integer, all to the power of 2. and C is (3 x 8)^2 so n = 8 and it squared so it is 3 step."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hack 3\n",
+    "Rewrite this JavaScript Code in a more efficient way\n",
+    "\n",
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2994650908.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [12]\u001b[0;36m\u001b[0m\n\u001b[0;31m    function peak_finder(array){\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "function peak_finder(array){\n",
+    "  let counter = 0\n",
+    "  let peak = 0\n",
+    "  let peak_index =0\n",
+    "  while (counter <= array.length){\n",
+    "    console.log(counter)\n",
+    "  if (counter === 0){\n",
+    "    if (a[0]>=a[1]){\n",
+    "      peak = a[0]\n",
+    "      peak_index = counter\n",
+    "      counter = array.length\n",
+    "      return `The ${counter-1} indexed number, ${peak} is a peak`\n",
+    "    }else{\n",
+    "      counter+=1\n",
+    "    }\n",
+    "  }else if(counter === array.length-1){\n",
+    "     if (a[array.length-1] >= a[array.length-2]){\n",
+    "     peak = a[array.length-1]\n",
+    "     peak_index = counter\n",
+    "     counter = array.length\n",
+    "     return `The ${counter-1} indexed number, ${peak} is a peak`\n",
+    "     }\n",
+    "   }else{\n",
+    "      if (a[counter]> a[counter+1] && a[counter]> a[counter-1]){\n",
+    "      peak = a[counter]\n",
+    "      peak_index = counter\n",
+    "      counter = array.length\n",
+    "      return `The ${counter-1} indexed number, ${peak} is a peak`\n",
+    "    }else{\n",
+    "      counter += 1\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hack 4\n",
+    "Rewrite this Python Code in a more efficient way\n",
+    "\n",
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### you can just use the sort function instead of doing all the code to do it from scratch. \n",
+    "data = [9, 1, 7, 6, 2, 8, 5, 3, 4, 0]\n",
+    "data.sort()\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hack 5\n",
+    "Rewrite this Python Code in a more efficient way\n",
+    "\n",
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(1, 3, 2)\n",
+      "(2, 1, 3)\n",
+      "(2, 3, 1)\n",
+      "(3, 1, 2)\n",
+      "(3, 2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "### you can just use the permutations function instead of doing all the code from scratch.\n",
+    "from itertools import permutations\n",
+    "\n",
+    "comb = permutations([1, 2, 3], 3)\n",
+    "  \n",
+    "for i in comb:\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
@@ -97,8 +288,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
