--- a/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
+++ b/_posts/2022-12-14-3.17-18-Hacks-and-Notes.md
@@ -76,6 +76,234 @@ layout: notebook
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Hack-1">Hack 1<a class="anchor-link" href="#Hack-1"> </a></h3><p>Please write a short 1-2 sentence explanation describing the difference between decidable and undecidable problems. Make sure to provide at least one example of each.</p>
+<p>Answer: 
+A decidable problem is a problem for which algorithms can be written to solve/produce a correct output for all possible inputs. An example is if checking if a specific number is odd or even.</p>
+
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">num</span> <span class="o">=</span> <span class="mi">7</span>
+
+<span class="k">if</span> <span class="n">num</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span> 
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;is odd&quot;</span><span class="p">)</span> 
+<span class="k">else</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;is even&quot;</span><span class="p">)</span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>is odd
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>An undecidable problem is a problem for which no algorithms can be built that can provide a correct yes or no answer. An example is trying to find what the weather is going to be in a million years, no one can know because no one has traveled a million years.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Hack-2">Hack 2<a class="anchor-link" href="#Hack-2"> </a></h3><p>Which of the following is a 3 step algorithm?</p>
+<p>Answer:
+It would be C because a 3 step algorithm is an algorithm where there is a variable multiplied by an integer, all to the power of 2. and C is (3 x 8)^2 so n = 8 and it squared so it is 3 step.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Hack-3">Hack 3<a class="anchor-link" href="#Hack-3"> </a></h3><p>Rewrite this JavaScript Code in a more efficient way</p>
+<p>Answer:</p>
+
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">function</span> <span class="n">peak_finder</span><span class="p">(</span><span class="n">array</span><span class="p">){</span>
+  <span class="n">let</span> <span class="n">counter</span> <span class="o">=</span> <span class="mi">0</span>
+  <span class="n">let</span> <span class="n">peak</span> <span class="o">=</span> <span class="mi">0</span>
+  <span class="n">let</span> <span class="n">peak_index</span> <span class="o">=</span><span class="mi">0</span>
+  <span class="k">while</span> <span class="p">(</span><span class="n">counter</span> <span class="o">&lt;=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="p">){</span>
+    <span class="n">console</span><span class="o">.</span><span class="n">log</span><span class="p">(</span><span class="n">counter</span><span class="p">)</span>
+  <span class="k">if</span> <span class="p">(</span><span class="n">counter</span> <span class="o">===</span> <span class="mi">0</span><span class="p">){</span>
+    <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">&gt;=</span><span class="n">a</span><span class="p">[</span><span class="mi">1</span><span class="p">]){</span>
+      <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+      <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
+      <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
+      <span class="k">return</span> <span class="err">`</span><span class="n">The</span> <span class="err">$</span><span class="p">{</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">}</span> <span class="n">indexed</span> <span class="n">number</span><span class="p">,</span> <span class="err">$</span><span class="p">{</span><span class="n">peak</span><span class="p">}</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">peak</span><span class="err">`</span>
+    <span class="p">}</span><span class="k">else</span><span class="p">{</span>
+      <span class="n">counter</span><span class="o">+=</span><span class="mi">1</span>
+    <span class="p">}</span>
+  <span class="p">}</span><span class="k">else</span> <span class="k">if</span><span class="p">(</span><span class="n">counter</span> <span class="o">===</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">){</span>
+     <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">2</span><span class="p">]){</span>
+     <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="n">array</span><span class="o">.</span><span class="n">length</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
+     <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
+     <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
+     <span class="k">return</span> <span class="err">`</span><span class="n">The</span> <span class="err">$</span><span class="p">{</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">}</span> <span class="n">indexed</span> <span class="n">number</span><span class="p">,</span> <span class="err">$</span><span class="p">{</span><span class="n">peak</span><span class="p">}</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">peak</span><span class="err">`</span>
+     <span class="p">}</span>
+   <span class="p">}</span><span class="k">else</span><span class="p">{</span>
+      <span class="k">if</span> <span class="p">(</span><span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span> <span class="o">&amp;&amp;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span><span class="o">&gt;</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">]){</span>
+      <span class="n">peak</span> <span class="o">=</span> <span class="n">a</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span>
+      <span class="n">peak_index</span> <span class="o">=</span> <span class="n">counter</span>
+      <span class="n">counter</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">length</span>
+      <span class="k">return</span> <span class="err">`</span><span class="n">The</span> <span class="err">$</span><span class="p">{</span><span class="n">counter</span><span class="o">-</span><span class="mi">1</span><span class="p">}</span> <span class="n">indexed</span> <span class="n">number</span><span class="p">,</span> <span class="err">$</span><span class="p">{</span><span class="n">peak</span><span class="p">}</span> <span class="ow">is</span> <span class="n">a</span> <span class="n">peak</span><span class="err">`</span>
+    <span class="p">}</span><span class="k">else</span><span class="p">{</span>
+      <span class="n">counter</span> <span class="o">+=</span> <span class="mi">1</span>
+    <span class="p">}</span>
+  <span class="p">}</span>
+<span class="p">}</span>
+<span class="p">}</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_text output_error">
+<pre>
+<span class="ansi-cyan-fg">  Input </span><span class="ansi-green-fg">In [12]</span>
+<span class="ansi-red-fg">    function peak_finder(array){</span>
+             ^
+<span class="ansi-red-fg">SyntaxError</span><span class="ansi-red-fg">:</span> invalid syntax
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Hack-4">Hack 4<a class="anchor-link" href="#Hack-4"> </a></h3><p>Rewrite this Python Code in a more efficient way</p>
+<p>Answer:</p>
+
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="mi">9</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">7</span><span class="p">,</span> <span class="mi">6</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">8</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">0</span><span class="p">]</span>
+<span class="n">data</span><span class="o">.</span><span class="n">sort</span><span class="p">()</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="n">data</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Hack-5">Hack 5<a class="anchor-link" href="#Hack-5"> </a></h3><p>Rewrite this Python Code in a more efficient way</p>
+<p>Answer:</p>
+
+</div>
+</div>
+</div>
+    {% raw %}
+    
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">itertools</span> <span class="kn">import</span> <span class="n">permutations</span>
+
+<span class="n">comb</span> <span class="o">=</span> <span class="n">permutations</span><span class="p">([</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">],</span> <span class="mi">3</span><span class="p">)</span>
+  
+<span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">comb</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="n">i</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>(1, 2, 3)
+(1, 3, 2)
+(2, 1, 3)
+(2, 3, 1)
+(3, 1, 2)
+(3, 2, 1)
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    {% endraw %}
+
 </div>
  
 
