--- a/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
@@ -217,7 +217,7 @@
     "      obstacles.append(r)\n",
     "   if r not in obstacles:\n",
     "      obstacles.append(r)\n",
-    "print(f\"The goal position is: {obstacles}\")\n",
+    "print(f\"The obstacles are at: {obstacles}\")\n",
     "\n",
     "## I tried to make it so the program wouldn't repeat the same number twice and it worked but it doubles the number."
    ]
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
