--- a/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
+++ b/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
@@ -244,7 +244,7 @@ Player two lost with a score of 3
       <span class="n">obstacles</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">r</span><span class="p">)</span>
    <span class="k">if</span> <span class="n">r</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">obstacles</span><span class="p">:</span>
       <span class="n">obstacles</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">r</span><span class="p">)</span>
-<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;The goal position is: </span><span class="si">{</span><span class="n">obstacles</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;The obstacles are at: </span><span class="si">{</span><span class="n">obstacles</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
 
 <span class="c1">## I tried to make it so the program wouldn&#39;t repeat the same number twice and it worked but it doubles the number.</span>
 </pre></div>
